--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,9 +1,8 @@
 //Buttons placeholder
 
 .theme__colors {
-	margin: 10px auto;
+	margin: 6px auto;
 	padding: 10px 0;
-	text-transform: uppercase;
 	border: none;
 	width: 99%;
 	border-radius: 5px;
@@ -15,6 +14,7 @@
 	&--error,
 	&--warning,
 	&--info {
+		text-transform: uppercase;
 		color: white;
 		@include mq {
 			margin: 0 7px;
