--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -14,6 +14,7 @@
 			background-color: $nav-color-light;
 			color: darkslategray;
 			transition: background-color .5s ease-in;
+			border-radius: 5px;
 		}
 	}
 	&-item {
