--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -6,7 +6,6 @@
 	@content;
 }
 @mixin btn-grid-styles {
-	text-align: center;
 	color: darkgrey;
 	@content;
 }
@@ -20,7 +19,7 @@
 	}
 }
 @mixin max {
-	@media (max-width: 600px) {
-		margin: 30px 0;
+	@media (max-width: $tablet) {
+		margin: 15px 0;
 	}
 }
